manifests/gitlab-runner-operator-1.6.0.tgz-manifest.yaml
---
# Source: gitlab-runner-operator/templates/svc-metric-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-runner-operator-controller-manager-metrics-service
  labels:
    helm.sh/chart: gitlab-runner-operator-1.6.0
    app.kubernetes.io/name: gitlab-runner-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
  selector:
      app.kubernetes.io/name: gitlab-runner-operator
      app.kubernetes.io/instance: my-release
---
# Source: gitlab-runner-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-runner-operator
  labels:
    helm.sh/chart: gitlab-runner-operator-1.6.0
    app.kubernetes.io/name: gitlab-runner-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitlab-runner-operator
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitlab-runner-operator
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: gitlab-runner-operator-controller-manager
      securityContext:
        runAsNonRoot: true
      volumes:
        - name: gitlab-runner-webhook-cert
          secret:
            secretName: gitlab-runner-operator-webhook-tls
            optional: false
      containers:
        - name: operator
          args:
            - --health-probe-bind-address=:8081
            - --metrics-bind-address=127.0.0.1:8080
            - --leader-elect
          securityContext:
            allowPrivilegeEscalation: false
          image: "ghcr.io/alekc/gitlab-runner-operator:v1.3.0"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs/
              name: gitlab-runner-webhook-cert
              readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 30Mi
            requests:
              cpu: 100m
              memory: 20Mi
      terminationGracePeriodSeconds: 10
---
# Source: gitlab-runner-operator/templates/webhooks/svc-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-runner-operator
  labels:
    helm.sh/chart: gitlab-runner-operator-1.6.0
    app.kubernetes.io/name: gitlab-runner-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
      app.kubernetes.io/name: gitlab-runner-operator
      app.kubernetes.io/instance: my-release
---
# Source: gitlab-runner-operator/templates/webhooks/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name:  gitlab-runner-operator
  labels:
    helm.sh/chart: gitlab-runner-operator-1.6.0
    app.kubernetes.io/name: gitlab-runner-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-weight": "-5"
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: gitlab-runner-operator
        namespace: default
        path: /mutate-gitlab-k8s-alekc-dev-v1beta1-runner
    failurePolicy: Fail
    name: mrunner.kb.io
    rules:
      - apiGroups:
          - gitlab.k8s.alekc.dev
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runners
    sideEffects: None
---
# Source: gitlab-runner-operator/templates/webhooks/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gitlab-runner-operator
  labels:
    helm.sh/chart: gitlab-runner-operator-1.6.0
    app.kubernetes.io/name: gitlab-runner-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-weight": "-5"
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: gitlab-runner-operator
        namespace: default
        path: /validate-gitlab-k8s-alekc-dev-v1beta1-runner
    failurePolicy: Fail
    name: vrunner.kb.io
    rules:
      - apiGroups:
          - gitlab.k8s.alekc.dev
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - runners
    sideEffects: None
